# winsock2_sample

./: CMakeLists.txt  LICENSE  README.md
src/client/: client.cpp
src/common/: context.cpp  context.h  types.cpp  types.h
src/server/: server.cpp
